[fix] remove blank gap between header and page content

--- a/app/assets/stylesheets/redesign/layout/_header.scss
+++ b/app/assets/stylesheets/redesign/layout/_header.scss
@@ -48,7 +48,7 @@ header.main {
   }
 
   .nav-icons {
-    margin-top: -4px;
+    margin-top: -6px;
     padding-right: 5px;
 
     .icon {
@@ -154,8 +154,8 @@ header.main {
       }
 
       .nav-main-menu {
-        padding-bottom: 28px;
-        margin-top: -2px;
+        padding-bottom: 26px;
+        margin-top: 2px;
 
         span:hover {
           border-color: $c-neutral-black;
