--- a/app/assets/stylesheets/redesign/layout/_nav-menu.scss
+++ b/app/assets/stylesheets/redesign/layout/_nav-menu.scss
@@ -5,7 +5,7 @@
 .nav-menu-wrap {
   text-transform: none;
   background: $c-neutral-white;
-  padding: 20px 0;
+  padding: 0 0 20px 0;
 
   .panel-highlight {
     margin: 0;
